[tool.poetry]
name = "race-condition"
version = "0.1.0"
description = "A barebones Flask application."
authors = ["Your Name <simon.merrick@python.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
markdown = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"